--- a/index.html
+++ b/index.html
@@ -1785,7 +1785,7 @@ h2::before {
                         </div>
                         
                         <h1>나만의 AI로 만들어<br>개인 생산성 향상하기</h1>
-                        <div class="tagline">단순한 AI 소개가 아닌, 실전 커스터마이징 과정</div>
+                        <div class="tagline">단순한 AI 소개가 아닌, 실전 커스터마이징 과정 Ver.1</div>
                     </div>
                     <p class="header-desc">현업이나 일상에서 바로 활용할 수 있는 나만의 AI 도구를 만들고 싶으신가요?
                     이론과 단순 소개가 아닌 철저한 실습과 커스터마이징이 필요하신가요?</p>
